fix center place on mobile

--- a/sass/spacing/place.scss
+++ b/sass/spacing/place.scss
@@ -8,11 +8,15 @@
     @include until($desktop) {
       margin: 0 2rem;
     }
+    @include until($phone) {
+      margin-left: 1rem!important;
+      margin-right: 1rem!important;
+    }
   }
   .p-max-#{$i} {
     margin-right: $dist;
     @include until($desktop) {
-      margin-right: initial;
+      margin-right: 0;
     }
   }
 }
